# xmipp4-binding-python

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml
.github/composites/install-xmipp4-core/: action.yml
.github/workflows/: build-and-test-pip.yml  build-and-test-venv.yml  build-and-test.yml  build-wheel.yml  build.yml  deploy.yml  release.yml
python/xmipp4/: __init__.py  load_core.py
scripts/: run-tests.sh
src/: CMakeLists.txt  init.cpp  interface_catalog.cpp  interface_catalog.hpp  interface_registry.cpp  interface_registry.hpp  main.cpp  plugin.cpp  plugin.hpp  plugin_manager.cpp  plugin_manager.hpp  service_catalog.cpp  service_catalog.hpp  slice_caster.hpp  version.cpp  version.hpp
src/communication/: communicator.cpp  communicator.hpp  communicator_manager.cpp  communicator_manager.hpp  main.cpp  main.hpp
src/compute/: device.cpp  device.hpp  device_create_parameters.cpp  device_create_parameters.hpp  device_event.cpp  device_event.hpp  device_index.cpp  device_index.hpp  device_manager.cpp  device_manager.hpp  device_properties.cpp  device_properties.hpp  device_queue.cpp  device_queue.hpp  device_queue_pool.cpp  device_queue_pool.hpp  device_to_host_event.cpp  device_to_host_event.hpp  device_type.cpp  device_type.hpp  init.cpp  init.hpp  main.cpp  main.hpp
src/hardware/: device.cpp  device_event.cpp  device_event.hpp  device_index.cpp  device_index.hpp  device_manager.cpp  device_manager.hpp  device_properties.cpp  device_properties.hpp  device_queue.cpp  device_queue.hpp  device_to_host_event.cpp  device_to_host_event.hpp  device_type.cpp  device_type.hpp  main.cpp  main.hpp
src/image/: location.cpp  location.hpp  main.cpp  main.hpp
src/multidimensional/: array.cpp  array.hpp  main.cpp  main.hpp
tests/: CMakeLists.txt  test_plugin_manager.py  test_plugins.py  test_version.py
tests/assets/: CMakeLists.txt
tests/assets/dummy_plugin1/: CMakeLists.txt  plugin.cpp
tests/assets/dummy_plugin2/: CMakeLists.txt  plugin.cpp
tests/communication/: test_communicator_manager.py
tests/compute/: test_device.py  test_device_index.py  test_device_manager.py
tests/e2e/assets/: CMakeLists.txt
tests/e2e/assets/dummy_plugin1/: CMakeLists.txt  plugin.cpp
tests/e2e/assets/dummy_plugin2/: CMakeLists.txt
tests/hardware/: test_device.py  test_device_index.py  test_device_manager.py
